--- a/index.html
+++ b/index.html
@@ -27,21 +27,22 @@
         </div>
       </div>
     </div>
-    <div class="bg-black">
-      <div class="row justify-content-center">
-        <div class="d-flex col-6">
+    <div class="container-fluid bg-black">
+      <div class="row">
+        <div class="col-3 d-flex justify-content-end">
           <span class="mdi mdi-sledding fs-4 text-warning">Sports Man!</span>
         </div>
-        <div class="col-6 text-end text-white">
-          <span>Home</span>
+        <div class="d-flex col-7 gap-5 justify-content-end text-white">
+          <span class="text-warning">Home</span>
           <span>About</span>
           <span>Facilities</span>
           <span>Membership</span>
           <span>Blog</span>
           <span>Contact</span>
         </div>
-
       </div>
+    </div>
+    </div>
 
 
     </div>
