--- a/index.html
+++ b/index.html
@@ -16,38 +16,97 @@
   <header>
     <div class="container-fluid">
       <div class="row justify-content-center bg-secondary">
-        <div class="col-4">
+        <div class="col-8 col-md-4 p-2">
           <div class="d-flex justify-content-space-evenly">
             <span class="mdi mdi-map pe-3">1600 Pennsylvania Avenue NW, Washington, DC 20500</span>
             <span class="mdi mdi-phone">911</span>
           </div>
         </div>
-        <div class="col-4 text-end">
+        <div class="col-2 col-md-4 text-end p-2">
           <span class="btn btn-warning"> Join Now</span>
         </div>
       </div>
     </div>
-    <div class="container-fluid bg-black">
-      <div class="row">
-        <div class="col-3 d-flex justify-content-end">
-          <span class="mdi mdi-sledding fs-4 text-warning">Sports Man!</span>
-        </div>
-        <div class="d-flex col-7 gap-5 justify-content-end text-white">
-          <span class="text-warning">Home</span>
-          <span>About</span>
-          <span>Facilities</span>
-          <span>Membership</span>
-          <span>Blog</span>
-          <span>Contact</span>
+  </header>
+
+  <div class="container-fluid bg-black">
+    <div class="row">
+      <div class="col-12">
+        <div class="d-flex justify-content-evenly align-items-center">
+
+          <div class="left">
+            <span class="fs-4 text-warning">
+              <i class="mdi mdi-sledding"></i>
+              Sports Man!
+            </span>
+          </div>
+          <div class="justify-content-start right text-light ">
+            <span class="text-warning">Home</span>
+            <span>About</span>
+            <span>Facilities</span>
+            <span>Membership</span>
+            <span>Blog</span>
+            <span>Contact</span>
+          </div>
         </div>
       </div>
     </div>
+  </div>
+
+
+  <!-- .<div class="container">
+    <div class="row">
+      <div class="col-lg-4 col-sm-6 my-2">
+        <div class="box red"></div>
+      </div>
+      <div class="col-lg-4 col-sm-6 my-2">
+        <div class="box green"></div>
+      </div>
+      <div class="col-lg-4 col-sm-6 my-2">
+        <div class="box blue"></div>
+      </div>
+      <div class="col-lg-4 col-sm-6 my-2">
+        <div class="box blue"></div>
+      </div>
+      <div class="col-lg-4 col-sm-6 my-2">
+        <div class="box blue"></div>
+      </div>
+      <div class="col-lg-4 col-sm-6 my-2">
+        <div class="box blue"></div>
+      </div>
+      <div class="col-lg-4 col-sm-6 my-2">
+        <div class="box blue"></div>
+      </div>
+      <div class="col-lg-4 col-sm-6 my-2">
+        <div class="box blue"></div>
+      </div>
+      <div class="col-lg-4 col-sm-6 my-2">
+        <div class="box blue"></div>
+      </div>
+      <div class="col-lg-4 col-sm-6 my-2">
+        <div class="box blue"></div>
+      </div>
+      <div class="col-lg-4 col-sm-6 my-2">
+        <div class="box blue"></div>
+      </div>
+      <div class="col-lg-4 col-sm-6 my-2">
+        <div class="box blue"></div>
+      </div>
+      <div class="col-lg-4 col-sm-6 my-2">
+        <div class="box blue"></div>
+      </div>
+      <div class="col-lg-4 col-sm-6 my-2">
+        <div class="box blue"></div>
+      </div>
+      <div class="col-lg-4 col-sm-6 my-2">
+        <div class="box blue"></div>
+      </div>
     </div>
+  </div> -->
 
 
-    </div>
 
-  </header>
+
 </body>
 
 </html>
