Team running pic

--- a/index.html
+++ b/index.html
@@ -28,33 +28,60 @@
       </div>
     </div>
   </header>
+  <!-- NOTE Header 2 -->
+  <main>
+    <div class="container-fluid bg-black">
+      <div class="row">
+        <div class="col-12">
+          <div class="d-flex justify-content-evenly align-items-center">
 
-  <div class="container-fluid bg-black">
-    <div class="row">
-      <div class="col-12">
-        <div class="d-flex justify-content-evenly align-items-center">
-
-          <div class="left">
-            <span class="fs-4 text-warning">
-              <i class="mdi mdi-sledding"></i>
-              Sports Man!
-            </span>
-          </div>
-          <div class="justify-content-start right text-light ">
-            <span class="text-warning">Home</span>
-            <span>About</span>
-            <span>Facilities</span>
-            <span>Membership</span>
-            <span>Blog</span>
-            <span>Contact</span>
+            <div class="left">
+              <span class="fs-4 text-warning">
+                <i class="mdi mdi-sledding"></i>
+                Sports Man!
+              </span>
+            </div>
+            <div class="justify-content-start right text-light ">
+              <span class="text-warning">Home</span>
+              <span>About</span>
+              <span>Facilities</span>
+              <span>Membership</span>
+              <span>Blog</span>
+              <span>Contact</span>
+            </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
+    <!-- NOTE Hero section -->
+    <div class="container-fluid">
+      <div class="row align-items-center runner-bg">
+        <div class="col-md-12">
+          <div class="text-center">
+            <h2 class="text-white text-shadow">WELCOME TO OUR SPORTS CLUB</h2>
+            <h1 class="text-white text-shadow">JOIN NOW OUR YOUTH SQUAD CLUB</h1>
+            <button class="btn btn-outline-warning">JOIN NOW</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <section class="containter-fluid">
+      <div class="row team-bg">
+        <div class="col-md-12">
 
 
-  <!-- .<div class="container">
+
+
+        </div>
+
+
+    </section>
+  </main>
+
+</body>
+
+<!-- .<div class="container">
     <div class="row">
       <div class="col-lg-4 col-sm-6 my-2">
         <div class="box red"></div>
@@ -102,11 +129,9 @@
         <div class="box blue"></div>
       </div>
     </div>
-  </div> -->
 
 
 
 
-</body>
 
 </html>
