--- a/index.html
+++ b/index.html
@@ -67,13 +67,51 @@
     </div>
 
     <section class="containter-fluid">
-      <div class="row team-bg">
+      <div class="row team-bg d-flex">
         <div class="col-md-12">
-
-
-
-
+          <div class="text-center text-black">
+            <h2>OUR FEATURES</h2>
+          </div>
         </div>
+
+        <div class="col-md-3 p-5">
+          <div class="text-center align-items-center">
+            <div class="box warning">
+              <span class="mdi mdi-arrow-projectile-multiple"></span>
+              <p>XTREME SPORTS</p>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident delectus impedit voluptatum. </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3 p-5">
+          <div class="text-center align-items-center">
+            <div class="box warning">
+              <span class="mdi mdi-medal"></span>
+              <p>WINS ALWAYS</p>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident delectus impedit voluptatum. </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-3 p-5">
+          <div class="text-center align-items-center box yellow">
+            <div class="box warning">
+              <span class="mdi mdi-account-group"></span>
+              <p>GREAT STAFF</p>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident delectus impedit voluptatum.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3 p-5">
+          <div class="text-center align-items-center">
+            <div class="box warning">
+              <span class="mdi mdi-image-filter-hdr"></span>
+              <p>ADVENTURE</p>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident delectus impedit voluptatum.
+              </p>
+            </div>
+
 
 
     </section>
