sports offered section

--- a/index.html
+++ b/index.html
@@ -65,29 +65,30 @@
         </div>
       </div>
     </div>
-
+    <!-- NOTE Information section -->
     <section class="containter-fluid">
-      <div class="row team-bg d-flex">
+      <div class="row team-bg">
         <div class="col-md-12">
-          <div class="text-center text-black">
-            <h2>OUR FEATURES</h2>
+          <div class="text-center text-black pt-5">
+            <h2>OUR</h2>
+            <h2 class="text-warning">FEATURES</h2>
           </div>
         </div>
 
         <div class="col-md-3 p-5">
           <div class="text-center align-items-center">
-            <div class="box warning">
-              <span class="mdi mdi-arrow-projectile-multiple"></span>
-              <p>XTREME SPORTS</p>
+            <div class="box warning p-3">
+              <span class="mdi mdi-arrow-projectile-multiple fs-2"></span>
+              <p class="fw-bold">XTREME SPORTS</p>
               <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident delectus impedit voluptatum. </p>
             </div>
           </div>
         </div>
         <div class="col-md-3 p-5">
           <div class="text-center align-items-center">
-            <div class="box warning">
-              <span class="mdi mdi-medal"></span>
-              <p>WINS ALWAYS</p>
+            <div class="box warning p-3">
+              <span class="mdi mdi-medal fs-2"></span>
+              <p class="fw-bold">WINS ALWAYS</p>
               <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident delectus impedit voluptatum. </p>
             </div>
           </div>
@@ -95,9 +96,9 @@
 
         <div class="col-md-3 p-5">
           <div class="text-center align-items-center box yellow">
-            <div class="box warning">
-              <span class="mdi mdi-account-group"></span>
-              <p>GREAT STAFF</p>
+            <div class="box warning p-3">
+              <span class="mdi mdi-account-group fs-2"></span>
+              <p class="fw-bold">GREAT STAFF</p>
               <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident delectus impedit voluptatum.
               </p>
             </div>
@@ -105,9 +106,9 @@
         </div>
         <div class="col-md-3 p-5">
           <div class="text-center align-items-center">
-            <div class="box warning">
-              <span class="mdi mdi-image-filter-hdr"></span>
-              <p>ADVENTURE</p>
+            <div class="box warning p-3">
+              <span class="mdi mdi-image-filter-hdr fs-2"></span>
+              <p class="fw-bold">ADVENTURE</p>
               <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident delectus impedit voluptatum.
               </p>
             </div>
@@ -115,6 +116,28 @@
 
 
     </section>
+
+    <div class="containter-fluid">
+      <div class="row bg-dark">
+        <div class="col-md-6 text-center">
+          <p class="text-white fw-bold">SPORTS</p>
+        </div>
+        <div class="col-md-6 text-center">
+          <p class="text-warning fw-bold"> OFFERED</p>
+        </div>
+
+
+
+
+
+
+
+      </div>
+
+
+
+
+    </div>
   </main>
 
 </body>
