--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
   <link rel="stylesheet" href="style.css">
+  <script id="debug-script" src="https://cdn.jsdelivr.net/gh/MickShannahan/style-debug@latest/debug.min.js"
+    defer></script>
   <title>Sports Team</title>
 </head>
 
 
-<body>
+<body class="debug">
   <header>
     <div class="container-fluid">
       <div class="row justify-content-center bg-secondary">
@@ -66,7 +68,7 @@
       </div>
     </div>
     <!-- NOTE Information section -->
-    <section class="containter-fluid">
+    <section class="container-fluid">
       <div class="row team-bg">
         <div class="col-md-12">
           <div class="text-center text-black pt-5">
@@ -112,31 +114,20 @@
               <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident delectus impedit voluptatum.
               </p>
             </div>
+          </div>
+        </div>
+      </div>
 
 
 
     </section>
 
-    <div class="containter-fluid">
+    <div class="container-fluid">
       <div class="row bg-dark">
-        <div class="col-md-6 text-center">
-          <p class="text-white fw-bold">SPORTS</p>
+        <div class="col-12 text-center">
+          <p class="text-white fw-bold">SPORTS <span class="text-warning">OFFEERED</span></p>
         </div>
-        <div class="col-md-6 text-center">
-          <p class="text-warning fw-bold"> OFFERED</p>
-        </div>
-
-
-
-
-
-
-
       </div>
-
-
-
-
     </div>
   </main>
 
